log
sá., 19 de abr. de 2025 15:15:29: 
 tests:  0|6
total_score: 0/70
eeef3b7
sá., 19 de abr. de 2025 15:30:48: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
66cec36
sá., 19 de abr. de 2025 15:32:14: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
25eb000
sá., 19 de abr. de 2025 15:39:34: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|6
total_score: 0/70
bb63f31
sá., 19 de abr. de 2025 15:40:36: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
d7e85c9
do., 20 de abr. de 2025 13:46:23: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:42: error: 'return' with a value, in function returning void [-Werror]
     if(map ==NULL || key == NULL) return NULL;
                                          ^~~~
hashmap.c:42:6: note: declared here
 void insertMap(HashMap * map, char * key, void * value) {
      ^~~~~~~~~
hashmap.c:45:38: error: passing argument 1 of 'hash' makes pointer from integer without a cast [-Werror=int-conversion]
     unsigned long posicionMap = hash(*key, map->capacity);
                                      ^
hashmap.c:26:6: note: expected 'char *' but argument is of type 'char'
 long hash( char * key, long capacity) {
      ^~~~
hashmap.c:48:26: error: invalid type argument of '->' (have 'long unsigned int')
     if(strcmp(posicionMap->key, key) == 0) return;
                          ^~
hashmap.c:53:20: error: comparison between pointer and integer [-Werror]
     if(posicionMap == NULL || key == NULL ){
                    ^~
hashmap.c:46:19: error: unused variable 'originalPosicion' [-Werror=unused-variable]
     unsigned long originalPosicion = posicionMap;
                   ^~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
580fc51
do., 20 de abr. de 2025 13:46:33: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:42: error: 'return' with a value, in function returning void [-Werror]
     if(map ==NULL || key == NULL) return NULL;
                                          ^~~~
hashmap.c:42:6: note: declared here
 void insertMap(HashMap * map, char * key, void * value) {
      ^~~~~~~~~
hashmap.c:45:38: error: passing argument 1 of 'hash' makes pointer from integer without a cast [-Werror=int-conversion]
     unsigned long posicionMap = hash(*key, map->capacity);
                                      ^
hashmap.c:26:6: note: expected 'char *' but argument is of type 'char'
 long hash( char * key, long capacity) {
      ^~~~
hashmap.c:48:26: error: invalid type argument of '->' (have 'long unsigned int')
     if(strcmp(posicionMap->key, key) == 0) return;
                          ^~
hashmap.c:53:20: error: comparison between pointer and integer [-Werror]
     if(posicionMap == NULL || key == NULL ){
                    ^~
hashmap.c:46:19: error: unused variable 'originalPosicion' [-Werror=unused-variable]
     unsigned long originalPosicion = posicionMap;
                   ^~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
0e59c53
do., 20 de abr. de 2025 13:47:30: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:42: error: 'return' with a value, in function returning void [-Werror]
     if(map ==NULL || key == NULL) return NULL;
                                          ^~~~
hashmap.c:42:6: note: declared here
 void insertMap(HashMap * map, char * key, void * value) {
      ^~~~~~~~~
hashmap.c:45:38: error: passing argument 1 of 'hash' makes pointer from integer without a cast [-Werror=int-conversion]
     unsigned long posicionMap = hash(*key, map->capacity);
                                      ^
hashmap.c:26:6: note: expected 'char *' but argument is of type 'char'
 long hash( char * key, long capacity) {
      ^~~~
hashmap.c:48:26: error: invalid type argument of '->' (have 'long unsigned int')
     if(strcmp(posicionMap->key, key) == 0) return;
                          ^~
hashmap.c:53:20: error: comparison between pointer and integer [-Werror]
     if(posicionMap == NULL || key == NULL ){
                    ^~
test.c:453:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
 }
 ^
In file included from test.c:4:0:
hashmap.c:46:19: error: unused variable 'originalPosicion' [-Werror=unused-variable]
     unsigned long originalPosicion = posicionMap;
                   ^~~~~~~~~~~~~~~~
At top level:
test.c:453:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:217:5: error: 'insert_test5' defined but not used [-Werror=unused-function]
 int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
     ^~~~~~~~~~~~
test.c:131:6: error: 'compare_test' defined but not used [-Werror=unused-function]
 void compare_test(){
      ^~~~~~~~~~~~
test.c:125:6: error: 'hash_test3' defined but not used [-Werror=unused-function]
 void hash_test3(){ //no random
      ^~~~~~~~~~
test.c:111:6: error: 'hash_test2' defined but not used [-Werror=unused-function]
 void hash_test2(){ // colisiones
      ^~~~~~~~~~
test.c:100:6: error: 'hash_test1' defined but not used [-Werror=unused-function]
 void hash_test1(){ // posición válida
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
f6e36fb
do., 20 de abr. de 2025 13:48:41: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:42: error: 'return' with a value, in function returning void [-Werror]
     if(map ==NULL || key == NULL) return NULL;
                                          ^~~~
hashmap.c:42:6: note: declared here
 void insertMap(HashMap * map, char * key, void * value) {
      ^~~~~~~~~
hashmap.c:45:38: error: passing argument 1 of 'hash' makes pointer from integer without a cast [-Werror=int-conversion]
     unsigned long posicionMap = hash(*key, map->capacity);
                                      ^
hashmap.c:26:6: note: expected 'char *' but argument is of type 'char'
 long hash( char * key, long capacity) {
      ^~~~
hashmap.c:48:26: error: invalid type argument of '->' (have 'long unsigned int')
     if(strcmp(posicionMap->key, key) == 0) return;
                          ^~
hashmap.c:46:19: error: unused variable 'originalPosicion' [-Werror=unused-variable]
     unsigned long originalPosicion = posicionMap;
                   ^~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
a292cad
